# leetcode-clone

./: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  ARCHITECTURE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  sample_problems.json  skaffold.yaml
backend/: settings.py  urls.py
k8s/: configmap.yaml  django-deployment.yaml  judge0-db-deployment.yaml  judge0-db-pvc.yaml  judge0-deployment.yaml  judge0-worker-deployment.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  redis-deployment.yaml  secrets.yaml
nginx/conf.d/: default.conf  ssl.conf.example
problems/: admin.py  models.py  serializers.py  urls.py  views.py
problems/migrations/: 0001_initial.py
submissions/: admin.py  judge0_service.py  models.py  serializers.py  urls.py  views.py
submissions/migrations/: 0001_initial.py
templates/: base.html  index.html  leaderboard.html
templates/auth/: login.html  register.html
templates/problems/: detail.html  list.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
